2023-01-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/mdoc/doc-common (Sh, Ss): Narrow scope of font remappings
	lexically and restrict remapping to the heading font family (if
	any) to avoid undesired remapping of fonts in page headers if,
	say, a (sub)section heading begins just prior to a page
	break--which is ugly anyway and should be avoided, but the
	package has no keep macros and solving that problem in an
	automatic way promises to be complex.

2023-01-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an.tmac (MT, UR): Throw style warning if macro called
	without (exactly one) argument.

2022-12-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am (doc/groff-man-pages.pdf): Set (sub) section
	headings in Helvetica bold in compiled man pages, as a test and
	demonstration of the `HF` feature's application to both man(7)
	and mdoc(7) documents.

2022-12-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mdoc]: Support `HF` string.

	* tmac/doc.tmac (initialization): Add logic supporting `HF`
	string just as our man(7) implementation does.  If the font name
	ends with `B` (as the default does), set
	`doc-remap-I-style-in-headings` register and extract font
	family, which can be empty (as is the default).
	* tmac/mdoc/doc-common (Sh, Ss): If
	`doc-remap-I-style-in-headings` register set, perform (and
	unwind) font remapping of italic to bold-italic face.
	* tmac/mdoc/doc-ditroff:
	* tmac/mdoc/doc-nroff: Define `doc-Sh-font` in terms of `HF`.

	* tmac/tests/doc_heading-font-remapping-works.sh: Test it.
	* tmac/tmac.am (tmac_TESTS): Run test.

	* tmac/groff_mdoc.7.man (Options): Document it.
	* NEWS: Update item.

	Fixes last part of <https://savannah.gnu.org/bugs/?63046>.

2022-12-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tmac]: Revise "fallback" character definitions in several
	respects for Unicode characters from General Punctuation block.
